<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item   android:id="@+id/nav_home"        android:icon="@drawable/ic_home"     android:title="@string/menu_home" />
        <item   android:id="@+id/nav_order"     android:icon="@drawable/ic_add_cart"    android:title="@string/order" />
        <item   android:id="@+id/nav_cart"  android:icon="@drawable/ic_basket"  android:title="@string/cart" />
        <item   android:id="@+id/nav_history" android:icon="@drawable/ic_history"    android:title="Orders History" />
        <item   android:id="@+id/nav_my_account" android:icon="@drawable/ic_account"    android:title="@string/my_account" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_logout"            android:title="@string/logout" />
    </group>
</menu>