<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_backg"
    android:orientation="vertical"
    tools:context="com.FoodShop.SigninActivity">
<ImageView
    android:layout_marginTop="100dp"
    android:src="@drawable/logo"
    android:layout_centerHorizontal="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:fontFamily="@font/stilsa"
        android:textSize="40sp"
        android:textColor="@color/primary"
        />
    <RelativeLayout
       android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_width="wrap_content"
        android:backgroundTint="@color/transparent"
        android:layout_height="wrap_content">

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnRegister"
        android:layout_width="250dp"
        android:layout_height="50dp"
      android:layout_marginTop="0dp"
android:backgroundTint="@color/primary"
        android:textColorHint="@color/white"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:hint="@string/signup"
        />
    <TextView
        android:layout_alignTop="@id/btnRegister"
        android:layout_marginTop="65dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:alpha="0.8"
        android:textSize="11sp"
        android:textColor="@color/primary"
        android:fontFamily="@font/comforta"

android:text="@string/already_have_account"/>
    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
    android:layout_gravity="center"
        android:id="@+id/btnLogin"
    android:layout_width="250dp"
    android:layout_height="50dp"
        android:textSize="15sp"
android:layout_marginTop="85dp"
        app:strokeColor="@color/primary"
     android:background="@drawable/round_box"
    android:textColorHint="@color/primary"
    android:hint="@string/signin"/>
    </RelativeLayout>
</RelativeLayout>
