<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    tools:context="com.FoodShop.Login">

    <ImageView
        android:layout_marginTop="100dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="200dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:fontFamily="@font/stilsa"
        android:textSize="40sp"
        android:textColor="@color/primary"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:textColor="#033228"
android:text="@string/signin"

android:textSize="25sp"
        android:fontFamily="@font/comforta"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"/>
    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:layout_height="280dp"
app:cardElevation="0dp"
app:cardBackgroundColor="@color/lightgray"
        app:cardCornerRadius="0dp"

        >
        <View
            android:layout_width="match_parent"

            android:background="@drawable/cardviewborder"
            android:layout_height="match_parent"/>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            app:endIconMode="clear_text"

            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:hint="@string/email"

            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:imeOptions="flagNoExtractUi"
            android:textAlignment="center"

            android:outlineAmbientShadowColor="@color/primary2light"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"

                android:textSize="@dimen/textedit"
android:fontFamily="@font/comforta"
                android:inputType="textPersonName"
                android:padding="1sp"
                android:layout_height="40sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/password"
            android:imeOptions="flagNoExtractUi"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"

                android:padding="1sp"
                android:textSize="@dimen/textedit"
                android:fontFamily="@font/comforta"
                android:inputType="textPassword"
                android:layout_height="40sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:fontFamily="@font/comforta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_marginTop="135dp"
            android:layout_gravity="right"
            android:textSize="10sp"
            android:textColor="@color/design_default_color_secondary_variant"
            android:layout_marginRight="31sp"/>



        <TextView
            android:fontFamily="@font/comforta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_marginTop="35dp"
            android:visibility="invisible"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:textColor="#f00"
           />
        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:layout_height="50dp"
            android:layout_width="250dp"
            android:id="@+id/loginbtnlogin"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/primary"
android:text="@string/signin"

            app:spinning_bar_color="@color/secondary"
            app:spinning_bar_width="2dp"

           android:textAllCaps="false"
            android:textColor="@color/primary2light"
            android:layout_gravity="center_horizontal|bottom"
          />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center|bottom"
            android:orientation="horizontal"
            android:layout_height="wrap_content">


        </LinearLayout>

    </androidx.cardview.widget.CardView>



</RelativeLayout>